[package]
name = "learning_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { package = "bevy", version = "0.16.1" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking"]
